--- a/QuickFun/QuickFun.Web/Layout/NavMenu.razor
+++ b/QuickFun/QuickFun.Web/Layout/NavMenu.razor
@@ -19,6 +19,11 @@
                 <span class="bi bi-controller-nav-menu" aria-hidden="true"></span> Tic Tac Toe
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/game/memory">
+                <span class="bi bi-controller-nav-menu" aria-hidden="true"></span> Memory
+            </NavLink>
+        </div>
     </nav>
 </div>
 
