--- a/QuickFun/QuickFun.Web/Pages/GamePage.razor
+++ b/QuickFun/QuickFun.Web/Pages/GamePage.razor
@@ -3,6 +3,7 @@
 @using QuickFun.Domain.Enums
 @using QuickFun.Games
 @using QuickFun.Games.Engines
+@using QuickFun.Games.Memory
 @using QuickFun.Web.Components.Views
 
 @inject IGameFactory GameFactory
@@ -26,6 +27,9 @@
             {
                 @* Przekazujemy silnik do wydzielonego komponentu *@
                 <TicTacToeView Engine="ttt" />
+            }
+            else if (CurrentGame is MemoryEngine memory){
+                <MemoryView Engine="memory" />
             }
             else if (CurrentGame is SnakeEngine snake)
             {
@@ -51,7 +55,7 @@
     private IGameEngine? CurrentGame { get; set; }
 
     // OnParametersSet wykonuje się za każdym razem, gdy zmienia się URL (np. przechodzisz z /game/Snake na /game/TicTacToe)
-    protected override void OnParametersSet()
+    protected override async Task OnParametersSetAsync()
     {
         if (Enum.TryParse<GameType>(GameTypeString, true, out var type))
         {
@@ -64,9 +68,16 @@
         }
     }
 
-    private void Reset()
+    private async Task Reset()
     {
-        CurrentGame?.Reset();
+        if (CurrentGame == null) return;
+        
+        CurrentGame.Reset();
+
+        if (CurrentGame is MemoryEngine memory)
+        {
+            await memory.Start(() => InvokeAsync(StateHasChanged));
+        }
     }
 
     private void GoBack()
@@ -96,7 +107,7 @@
         margin: 2rem 0;
         min-height: 300px;
         display: flex;
-        flex-direction: column;
+        flex-direction: colunmn;
         justify-content: center;
         align-items: center;
     }
