--- a/QuickFun/QuickFun.Web/Layout/NavMenu.razor
+++ b/QuickFun/QuickFun.Web/Layout/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="bi bi-controller-nav-menu" aria-hidden="true"></span> Memory
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/game/minesweeper">
+                <span class="bi bi-controller-nav-menu" aria-hidden="true"></span> Minesweeper
+            </NavLink>
+        </div>
     </nav>
 </div>
 
