--- a/QuickFun/QuickFun.Web/Layout/NavMenu.razor
+++ b/QuickFun/QuickFun.Web/Layout/NavMenu.razor
@@ -9,22 +9,28 @@
 
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="nav flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/game/tictactoe">
-                <span class="bi bi-controller-nav-menu" aria-hidden="true"></span> Tic Tac Toe
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/game/memory">
-                <span class="bi bi-controller-nav-menu" aria-hidden="true"></span> Memory
-            </NavLink>
-        </div>
-    </nav>
+    <div class="nav-item px-3">
+        <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+        </NavLink>
+    </div>
+    <div class="nav-item px-3">
+        <NavLink class="nav-link" href="/game/tictactoe">
+            <span class="bi bi-controller-nav-menu" aria-hidden="true"></span> Tic Tac Toe
+        </NavLink>
+    </div>
+    <div class="nav-item px-3">
+        <NavLink class="nav-link" href="/game/memory">
+            <span class="bi bi-controller-nav-menu" aria-hidden="true"></span> Memory
+        </NavLink>
+    </div>
+    <div class="nav-item px-3">
+        <NavLink class="nav-link" href="/game/hangman">
+            <span class="bi bi-controller-nav-menu" aria-hidden="true"></span> Hangman
+        </NavLink>
+    </div>
+</nav>
+
 </div>
 
 @code {
