--- a/QuickFun/QuickFun.Web/Pages/GamePage.razor
+++ b/QuickFun/QuickFun.Web/Pages/GamePage.razor
@@ -36,7 +36,9 @@
             else if (CurrentGame is SudokuEngine sudoku)
             {
                 <SudokuView Engine="sudoku" />
-            else if (CurrentGame is MinesweeperEngine ms){
+            } @* <--- TU BRAKOWAŁO KLAMRY ZAMYKAJĄCEJ *@
+            else if (CurrentGame is MinesweeperEngine ms)
+            {
                 <MinesweeperView Engine="ms" />
             }
             else if (CurrentGame is SnakeEngine snake)
@@ -113,7 +115,7 @@
         margin: 2rem 0;
         min-height: 300px;
         display: flex;
-        flex-direction: colunmn;
+        flex-direction: column; @* <--- POPRAWIONO LITERÓWKĘ (było colunmn) *@
         justify-content: center;
         align-items: center;
     }
