--- a/QuickFun/QuickFun.Web/Layout/NavMenu.razor
+++ b/QuickFun/QuickFun.Web/Layout/NavMenu.razor
@@ -29,6 +29,11 @@
                 <span class="bi bi-controller-nav-menu" aria-hidden="true"></span> Minesweeper
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/game/sudoku">
+                <span class="bi bi-controller-nav-menu" aria-hidden="true"></span> Sudoku
+            </NavLink>
+        </div>
     </nav>
 </div>
 
