--- a/QuickFun/QuickFun.Web/Pages/GamePage.razor
+++ b/QuickFun/QuickFun.Web/Pages/GamePage.razor
@@ -36,7 +36,7 @@
             else if (CurrentGame is SudokuEngine sudoku)
             {
                 <SudokuView Engine="sudoku" />
-            } @* <--- TU BRAKOWAŁO KLAMRY ZAMYKAJĄCEJ *@
+            }
             else if (CurrentGame is MinesweeperEngine ms)
             {
                 <MinesweeperView Engine="ms" />
@@ -115,7 +115,7 @@
         margin: 2rem 0;
         min-height: 300px;
         display: flex;
-        flex-direction: column; @* <--- POPRAWIONO LITERÓWKĘ (było colunmn) *@
+        flex-direction: column;
         justify-content: center;
         align-items: center;
     }
