--- a/QuickFun/QuickFun.Web/Components/Views/TicTacToeView.razor
+++ b/QuickFun/QuickFun.Web/Components/Views/TicTacToeView.razor
@@ -2,6 +2,7 @@
 @using QuickFun.Domain.Enums
 @using QuickFun.Application.Interfaces
 @using QuickFun.Domain.Entities
+@using QuickFun.Games.Engines.TicTacToe
 @inject IGameSessionService SessionService
 
 @namespace QuickFun.Web.Components.Views
