--- a/QuickFun/QuickFun.Web/Layout/NavMenu.razor
+++ b/QuickFun/QuickFun.Web/Layout/NavMenu.razor
@@ -16,7 +16,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/game/tictactoe">
-                <span class="bi bi-controller-nav-menu" aria-hidden="true"></span> Tic Tac Toe
+                <span class="bi bi-controller-nav-menu" aria-hidden="true"></span> TicTacToe
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/game/tictactoewithai">
+                <span class="bi bi-controller-nav-menu" aria-hidden="true"></span> TicTacToewithAI
             </NavLink>
         </div>
         <div class="nav-item px-3">
